Course allocation system

--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
 
 <body>
     <div class="header"></div>
-    <div class="side-bar"></div>
+    <div class="side-bar">
+        <div>
+            <img src="./assets/icons/dashboard-solid-48.png" alt="">
+        </div>
+        <div class="text">Dashboard</div>
+        <div>
+            <img src="./assets/icons/form.svg" alt="">
+        </div>
+        <div class="text">Forms</div>
+        <div>
+            <img src="./assets/icons/pin.svg" alt="">
+        </div>
+        <div class="text">Application statistics</div>
+        <div>
+            <img src="./assets/icons/stats.svg" alt="">
+        </div>
+        <div class="text">Student statistics</div>
+        <div>
+            <img src="./assets/icons/stats.svg" alt="">
+        </div>
+        <div class="text">Lecturer statistics</div>
+    </div>
+    </div>
     <div class="main-content"></div>
 </body>
 
