Course allocation system

--- a/index.html
+++ b/index.html
@@ -13,27 +13,36 @@
 <body>
     <div class="header"></div>
     <div class="side-bar">
-        <div>
-            <img src="./assets/icons/dashboard-solid-48.png" alt="">
+        <div class="side-bar-header">
+            <div>
+                <img src="./assets/icons/icons8-dashboard-layout-48.png" alt="">
+            </div>
+            <div class="text">T.U.K admin</div>
         </div>
-        <div class="text">Dashboard</div>
-        <div>
-            <img src="./assets/icons/form.svg" alt="">
+        <div class="side-bar-contents">
+            <div>
+                <img src="./assets/icons/dashboard-solid-48.png" alt="">
+            </div>
+            <div class="text">Dashboard</div>
+            <div>
+                <img src="./assets/icons/form.svg" alt="">
+            </div>
+            <div class="text">Forms</div>
+            <div>
+                <img src="./assets/icons/pin.svg" alt="">
+            </div>
+            <div class="text">Application statistics</div>
+            <div>
+                <img src="./assets/icons/stats.svg" alt="">
+            </div>
+            <div class="text">Student statistics</div>
+            <div>
+                <img src="./assets/icons/stats.svg" alt="">
+            </div>
+            <div class="text">Lecturer statistics</div>
         </div>
-        <div class="text">Forms</div>
-        <div>
-            <img src="./assets/icons/pin.svg" alt="">
-        </div>
-        <div class="text">Application statistics</div>
-        <div>
-            <img src="./assets/icons/stats.svg" alt="">
-        </div>
-        <div class="text">Student statistics</div>
-        <div>
-            <img src="./assets/icons/stats.svg" alt="">
-        </div>
-        <div class="text">Lecturer statistics</div>
     </div>
+
     </div>
     <div class="main-content"></div>
 </body>
