--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
     </div>
 
     </div>
-    <div class="main-content"></div>
+    <div class="grid main-content">
+        <div class="content-1"></div>
+        <div class="content-2"></div>
+        <div class="content-3"></div>
+        <div class="content-4"></div>
+        <div class="content-5"></div>
+        <div class="content-6"></div>
+        <div class="content-7"></div>
+        <div class="content-8"></div>
+    </div>
 </body>
 
 </html>
