--- a/index.html
+++ b/index.html
@@ -45,11 +45,46 @@
 
     </div>
     <div class="grid main-content">
-        <div class="content-1"></div>
-        <div class="content-2"></div>
-        <div class="content-3"></div>
-        <div class="content-4"></div>
-        <div class="content-5"></div>
+        <div class="content-1">
+            <div>
+                <img src="./assets/icons/home.svg" alt="">
+            </div>
+            <div class="text">
+                Dashboard
+            </div>
+        </div>
+        <div class="content-2">
+            <div>
+                <img src="./assets/icons/Vector.svg" alt="">
+            </div>
+            <div class="text">
+                Lecturers
+            </div>
+        </div>
+        <div class="content-3">
+            <div>
+                <img src="./assets/icons/register.png" alt="">
+            </div>
+            <div class="text">
+                Register
+            </div>
+        </div>
+        <div class="content-4">
+            <div>
+                <img src="./assets/icons/depart.svg" alt="">
+            </div>
+            <div class="text">
+                Department/Faculties
+            </div>
+        </div>
+        <div class="content-5">
+            <div>
+                <img src="./assets/icons/Vector.svg" alt="">
+            </div>
+            <div class="text">
+                Students
+            </div>
+        </div>
         <div class="content-6"></div>
         <div class="content-7"></div>
         <div class="content-8"></div>
