Course allocation system

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     </div>
     <div class="grid main-content">
-        <div class="content-1">
+        <div class="box content-1">
             <div>
                 <img src="./assets/icons/home.svg" alt="">
             </div>
@@ -53,7 +53,7 @@
                 Dashboard
             </div>
         </div>
-        <div class="content-2">
+        <div class="box content-2">
             <div>
                 <img src="./assets/icons/Vector.svg" alt="">
             </div>
@@ -61,15 +61,15 @@
                 Lecturers
             </div>
         </div>
-        <div class="content-3">
+        <div class="box content-3">
             <div>
-                <img src="./assets/icons/register.png" alt="">
+                <img src="./assets/icons/applic.png" alt="">
             </div>
             <div class="text">
                 Register
             </div>
         </div>
-        <div class="content-4">
+        <div class="box content-4">
             <div>
                 <img src="./assets/icons/depart.svg" alt="">
             </div>
@@ -77,7 +77,7 @@
                 Department/Faculties
             </div>
         </div>
-        <div class="content-5">
+        <div class="box content-5">
             <div>
                 <img src="./assets/icons/Vector.svg" alt="">
             </div>
@@ -85,9 +85,30 @@
                 Students
             </div>
         </div>
-        <div class="content-6"></div>
-        <div class="content-7"></div>
-        <div class="content-8"></div>
+        <div class="box content-6">
+            <div>
+                <img src="./assets/icons/stats.svg" alt="">
+            </div>
+            <div class="text">
+                Statistics
+            </div>
+        </div>
+        <div class="box content-7">
+            <div>
+                <img src="./assets/icons/form.svg" alt="">
+            </div>
+            <div class="text">
+                Courses
+            </div>
+        </div>
+        <div class="box content-8">
+            <div>
+                <img src="./assets/icons/applic.png" alt="">
+            </div>
+            <div class="text">
+                Applications
+            </div>
+        </div>
     </div>
 </body>
 
