--- a/faculty.html
+++ b/faculty.html
@@ -42,12 +42,42 @@
 
     </div>
     <div class="grid main-content">
-        <div class="grid-content-1"></div>
-        <div class="grid-content-2"></div>
-        <div class="grid-content-3"></div>
-        <div class="grid-content-4"></div>
-        <div class="grid-content-5"></div>
-        <div class="grid-content-6"></div>
+        <div class="box grid-content-1">
+            <div>
+                <img src="./assets/icons/home.svg" alt="">
+            </div>
+            <div class="text">Dashboard</div>
+        </div>
+        <div class="box grid-content-2">
+            <div>
+                <img src="./assets/icons/Vector.svg" alt="">
+            </div>
+            <div class="text">Lecturer</div>
+        </div>
+        <div class="box grid-content-3">
+            <div>
+                <img src="./assets/icons/stats.svg" alt="">
+            </div>
+            <div class="text">Statistics</div>
+        </div>
+        <div class="box grid-content-4">
+            <div>
+                <img src="./assets/icons/form.svg" alt="">
+            </div>
+            <div class="text">Courses</div>
+        </div>
+        <div class="box grid-content-5">
+            <div>
+                <img src="./assets/icons/Vector.svg" alt="">
+            </div>
+            <div class="text">Students</div>
+        </div>
+        <div class="box grid-content-6">
+            <div>
+                <img src="./assets/icons/applic.png" alt="">
+            </div>
+            <div class="text">Applications</div>
+        </div>
     </div>
 </body>
 
